--- a/fortnite.html
+++ b/fortnite.html
@@ -25,7 +25,7 @@
                 </svg></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="INICIO.html" style="color: var(--bs-light);">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html" style="color: var(--bs-light);">INICIO</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" style="color: var(--bs-light);">FORTNITE</a></li>
                     <li class="nav-item"><a class="nav-link" href="ROBLOX.html" style="color: var(--bs-light);">ROBLOX</a></li>
                     <li class="nav-item"><a class="nav-link" href="MINECRAFT.html" style="color: var(--bs-light);">MINECRAFT</a></li>
